# tesseract

./: .gitignore  Cargo.toml  README.md
examples/: basic.rs
shaders/: pbr.wgsl
src/: engine.rs  lib.rs  prelude.rs
src/animation/: blend.rs  clip.rs  mod.rs  player.rs  skeleton.rs
src/asset/: gltf.rs  manager.rs  mod.rs
src/audio/: listener.rs  manager.rs  mod.rs  source.rs  spatial.rs
src/ecs/: components.rs  mod.rs  systems.rs  world.rs
src/math/: aabb.rs  mod.rs  transform.rs
src/physics/: mod.rs  raycast.rs  rigidbody.rs  shapes.rs  world.rs
src/render/: camera.rs  light.rs  mesh.rs  mod.rs  pbr.rs  pipeline.rs  renderer.rs  shadows.rs  texture.rs
src/scene/: graph.rs  mod.rs
tests/: integration_tests.rs
